feat: add secure athlete registration (#52)
